<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout.triangle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:padding="30sp"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle"
            android:textAlignment="center"
            android:textSize="34sp"/>

        <ImageView
            android:id="@+id/imgv1"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            app:srcCompat="@mipmap/triangle"
            android:layout_below="@+id/tv1"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv2"
            android:layout_below="@id/imgv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:text="@string/enter_height" />

        <EditText
            android:id="@+id/height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgv1"
            android:layout_toEndOf="@+id/tv2"
            android:hint="@string/app_name"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/height"
            android:paddingTop="16sp"
            android:text="@string/enter_base" />

        <EditText
            android:id="@+id/base"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/height"
            android:layout_toEndOf="@+id/tv3"
            android:hint="@string/app_name"
            android:inputType="number"
            android:minHeight="48dp"
            android:autofillHints="" />
        <Button
            android:layout_below="@+id/base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:id="@+id/area"/>
        <TextView
            android:id="@+id/answer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/base"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/area"
            android:text="@string/answer_load_here" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer"
            android:layout_alignParentStart="true"
            android:layout_margin="40dp"

            android:text="@string/clear" />

        <Button
            android:id="@+id/menubtn"
            android:layout_below="@id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_alignParentEnd="true"
            android:text="@string/menu" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>