<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout.rectangle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20sp"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle"

            android:textAlignment="center"
            android:textSize="34sp"/>

        <ImageView
            android:id="@+id/imgv1"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            app:srcCompat="@mipmap/circle"
            android:layout_below="@+id/tv1"
            android:contentDescription="@string/todo12" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/imgv1"
            android:layout_height="wrap_content"
            android:text="@string/enter_radius1"
            android:paddingTop="20sp"
            android:id="@+id/tv2"/>

        <EditText
            android:id="@+id/radius"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgv1"
            android:layout_toEndOf="@id/tv2"
            android:autofillHints="0"
            android:hint="|"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:layout_below="@id/radius"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area12"
            android:id="@+id/area"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radius"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/area"
            android:text="@string/answer_load_here2" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/clear3" />

        <Button
            android:id="@+id/menubtn"
            android:layout_below="@id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_alignParentEnd="true"
            android:text="@string/menu21" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>